--- a/app/src/main/res/layout/item_nhan_vien.xml
+++ b/app/src/main/res/layout/item_nhan_vien.xml
@@ -37,7 +37,7 @@
             android:layout_marginEnd="16dp">
 
             <TextView
-                android:id="@+id/txtHoTenNhanVien"
+                android:id="@+id/txtTenNhanVien"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nguyễn Văn A"
@@ -53,6 +53,15 @@
                 android:text="0123456789"
                 android:textSize="14sp"
                 android:textColor="@android:color/darker_gray" />
+
+            <TextView
+                android:id="@+id/txtVaiTroNhanVien"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Nhân viên"
+                android:textSize="12sp"
+                android:textColor="@android:color/holo_blue_dark" />
         </LinearLayout>
 
         <ImageView
