--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="green">#4CAF50</color>
     <color name="red">#F44336</color>
     <color name="grey_light">#E8E8E8</color>
+    
+    <!-- Bottom Navigation -->
+    <color name="bottom_nav_selected">#4A90E2</color>
+    <color name="bottom_nav_unselected">#757575</color>
 </resources>
