--- a/app/src/main/res/layout/item_cart_customer.xml
+++ b/app/src/main/res/layout/item_cart_customer.xml
@@ -44,6 +44,14 @@
                 android:ellipsize="end" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Type:"
+                android:textSize="12sp"
+                android:textColor="@color/text_secondary"
+                android:layout_marginTop="4dp" />
+
+            <TextView
                 android:id="@+id/txtGiaSanPham"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
