--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -12,8 +12,9 @@
         android:orientation="vertical"
         android:background="@color/grey_light"
         android:padding="12dp"
-        android:maxWidth="70%"
-        android:layout_gravity="start">
+        android:layout_gravity="start"
+        android:layout_marginEnd="80dp"
+        android:maxWidth="280dp">
 
         <TextView
             android:id="@+id/txtMessage"
