--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="text_secondary">#757575</color>
     <color name="divider">#E0E0E0</color>
     <color name="green">#4CAF50</color>
+    <color name="orange">#FF9800</color>
     <color name="red">#F44336</color>
     <color name="grey_light">#E8E8E8</color>
     
